namespace Baka.ContactSplitter.Model
{
    /// <summary>
    /// Represents the gender of a contact.
    /// </summary>
    public enum Gender
    {
        Female = 0,
        Male = 1,
        Neutral = 2
    }
}