using Baka.ContactSplitter.ViewModel;

namespace Baka.ContactSplitter.View
{
    /// <summary>
    /// Interaction logic for TitleWindow.xaml
    /// </summary>
    public partial class SalutationWindow : BaseWindow<SalutationWindowViewModel>
    {
        public SalutationWindow()
        {
            InitializeComponent();
        }
    }
}
