using Baka.ContactSplitter.ViewModel;

namespace Baka.ContactSplitter.View
{
    /// <summary>
    /// Interaction logic for TitleWindow.xaml
    /// </summary>
    public partial class TitleWindow : BaseWindow<TitleWindowViewModel>
    {
        public TitleWindow()
        {
            InitializeComponent();
        }
    }
}
